Changed all to english

--- a/style.css
+++ b/style.css
@@ -21,13 +21,12 @@ main {
     padding: 20px;
     display: flex;
     flex-direction: column;
-    /* justify-content: space-evenly; */
     align-items: center;
     background-color: #f1aa9b;
     border-radius: 10px;
 }
 
-.lista-tareas {
+.todo-list {
     display: flex;
     width: 400px;
     flex-direction: column;
@@ -48,10 +47,10 @@ li {
     background-color: #f0c38e;
 }
 
-.contenedor-tarea-nueva {
+.input-container {
     margin: 20px;
 }
 
-.contenedor-tarea-nueva > input, button {
+.input-container > input, button {
     height: 30px;
 }
